# smartstore-bot

./: .gitignore  LICENSE  main.py  pylintrc  pyproject.toml
.github/workflows/: python-package.yml  release-windows.yml
bot/application/: handler.py
bot/domain/: __init__.py  account.py  base.py  errander.py  product.py
bot/infrastructure/: __init__.py  account_repository.py  chrome_errander.py  database.py  errander.py  orm.py  web_driver.py
bot/interface/: __init__.py  container.py  gui.py  handler.py  settings.py
bot/interface/frames/: __init__.py  home.py
tests/infrastructure/: conftest.py  test_account_repository.py  test_chrome_errander.py
