[tool.poe.executor]
type = "simple"

[tool.poe.tasks]
_black-check = "black --check ."
_isort-check = "isort --check-only ."
format-check = ["_black-check", "_isort-check"]

_black = "black ."
_isort = "isort ."
format = ["_black", "_isort"]

_pylint = "pylint --rcfile=pylintrc bot tests"
lint = ["_pylint"]

coverage = "pytest --cov=bot"
coverage-report = "pytest --cov=bot --cov-report=xml"

unittest = "pytest -vv -x tests"

test = ["format-check", "lint", "coverage"]

_pyinstaller = "pyinstaller -w -F main.py"
release = ["_pyinstaller"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = ["**/.venv/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
[tool.coverage.report]
fail_under = 50
show_missing = true
[tool.coverage.xml]
output = "coverage-reports/coverage.xml"

[tool.poetry]
name = "smartstore-bot"
version = "0.1.0"
description = ""
authors = ["misut <pkr5207@gmail.com>"]

[tool.poetry.dependencies]
dependency-injector = "^4.37.0"
loguru = "^0.5.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pyinstaller = "^4.10"
python = ">=3.10,<3.11"
python-dotenv = "^0.20.0"
selenium = "^4.1.3"
webdriver-manager = "^3.5.4"
SQLAlchemy = "^1.4.34"
arsenic = "^21.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^6.0.2"
isort = "^5.9.3"
poethepoet = "^0.10.0"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"